add config loader generation